book/styles/nav.css
/* ... */
.toc-list .toc-dossier p {
    position: relative; display: block;
    z-index: 100
}
.toc-list h1 {
    margin-bottom: 0px;
    color: #fff;
    font-family: 'Oswald'
}
.toc-list p {
    color: efefef;
    text-transform: none;
    -webkit-transition: color 0.2s ease-out
}
.toc-dossier {
    position: relative; display: block; float: left;
    width: 96%; height: 120px;
    padding: 2%;
    background-color: #000;
    border-bottom: 1px solid #333;
    text-decoration: none;
    opacity: 1;
    -webkit-transition: opacity 0.2s ease-in;
    z-index: 3;
}
.toc-dossier:hover {
    opacity: 1;
    -webkit-transition: opacity 0.2s ease-out;
}
.toc-dossier:hover h1 {
    color: #77f9ae;
    -webkit-transition: color 0.2s ease-out
}
.toc-dossier:hover p {
    color: #fff;
    -webkit-transition: color 0.2s ease-out
}
.toc-dossier h1 {
    margin-top: 10px; margin-bottom: 15px;
    font-size: 1.9em;
    line-height: 1em !important
}
.toc-dossier p {    line-height: 1.2em !important }
.toc-thumb {
    float: left;
    margin-top: 3px; margin-right: 20px;
    border: 3px solid #333
}


/*
#####################################################################
Table of content on iOS devices
#####################################################################
*/
body{
    background-color: #000;	
}

.body-toc-ios {
    display: block;
    width: 100%;/* The width must be number of table of content entries * width of entry (410px)*/
    margin: 0px; padding: 0px;
    background-color: #000;
}
.toc-list-ios {
    height: 197px;
    margin-top: 0px; margin-right: 0px;
    padding: 0px;
    border-top: 3px solid #77f9ae;
    white-space: normal
}
.toc-list-ios .toc-dossier-number {
    position: absolute;
    margin-top: -60px; margin-left: -35px;
    font-size: 8em;
    font-family: "Oswald";
    z-index: -5;
    opacity: 0.4;
}
.toc-list-ios .toc-dossier {
    display: block; float: left;
    width: 349px; height: 117px;
    margin-top: 0px; margin-right: 0px;
    padding: 40px;
	padding-right: 20px;
    background-color: transparent; color: #efefef;
    border-right: 1px solid #333333; border-bottom: 0px solid #333;
    opacity: 1;
    white-space: normal;
}
.toc-list-ios .toc-dossier:last-child {
    width: 350px;
    border-right: 0px solid #000
}
.toc-list-ios .toc-dossier:hover h1 {
    color: #fff;
    : 
}

.toc-list-ios .toc-dossier p {    color: #9a9a9a }
.toc-list-ios h1 {
    margin-top: 5px; margin-bottom: 0px; margin-bottom: 12px;
    color: #fff;
    font-size: 1.2em;
    font-family: 'Oswald';
    line-height: 1.1em;
}
.toc-list-ios p {
    color: efefef !important;
    font-size: 1em;
    text-transform: none;
    line-height: 1.2em !important
}


/*
##########################################################################
##########################################################################
		Tablet Layout: 768px.
		Content-Element width: 712px.
		Gutters: 24px.
		Outer content margins: 28px.
		Inherits styles from: Default Layout.
##########################################################################
cols    1     2      3      4      5      6      7      8
px      68    160    252    344    436    528    620    712    
##########################################################################
##########################################################################
*/


@media only screen and (min-width: 768px) and (max-width: 991px) { 
	.nav-bar-container {
	    width: 768px;
	    margin: auto
	}
	
	.nav-button.toc {
    margin-right: 0px;
  
}
}


/*
#####################################################################
Hide navigation bar on iOS devices
#####################################################################
*/




/*
##########################################################################
##########################################################################
		iPad Layout Portrait: 768px.
		Content-Element width: 712px.
		Gutters: 24px.
		Outer content margins: 28px.
		Inherits styles from: Default Layout.
##########################################################################
cols    1     2      3      4      5      6      7      8
px      68    160    252    344    436    528    620    712   
##########################################################################
##########################################################################
 */
 
@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) { 
	.nav-bar,
	.edge-left,
	.edge-right,
	.logo-small,
	.nav-button.cover,
	.nav-container,
	.nav-button {    display: none }
}


/*
##########################################################################
##########################################################################
		iPad Layout Landscape: 1024px.
		Content-Element width: 896px.
		Gutters: 24px.
		Outer content margins: 64px.
		Inherits styles from: Default Layout.
##########################################################################
cols    1     2      3      4      5      6      7      8      9      10
px      68    160    252    344    436    528    620    712    804    896    
##########################################################################
##########################################################################
*/


@media only screen and (max-device-width: 1024px) and (orientation:landscape) { 
	.nav-bar-container {
	    display: none;
	    width: 1024px;
	    margin: auto
	}
	.nav-bar,
	.edge-left,
	.edge-right,
	.logo-small,
	.nav-button.cover,
	.nav-container,
	.nav-button {    display: none }
}
/* ... */

